--- a/mhoapp/theme/static_src/src/styles.css
+++ b/mhoapp/theme/static_src/src/styles.css
@@ -105,9 +105,7 @@ body {
 	border-bottom-color: $green;
 }
 
-.block-paragraph,
-.block-headingH1,
-.block-headingH2 {
+div[class^="block-"] {
 	@apply mb-mob;
 
 	@screen lg {
